feat: added reset css and created basic structure for landing page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link type="text/css" rel="stylesheet" href="/css/reset.css">
   <link type="text/css" rel="stylesheet" href="/css/home.css">
   <title>Sherlock Search</title>
 </head>
+<header class="header">
+  <ul>
+    <li>Sobre nós</li>
+  </ul>
+</header>
 <body>
-  <h1>Robson</h1>
+  <section class="main">
+    <h1>Insira aqui o seu alvo</h1>
+    <input type="text" class="input-search" />
+    <button>Buscar</button>
+  </section>
 </body>
+<footer class="footer">
+  <h3>Copyright 2024</h3>
+</footer>
 </html>
