--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link type="text/css" rel="stylesheet" href="/css/reset.css">
   <link type="text/css" rel="stylesheet" href="/css/home.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+    rel="stylesheet">
   <title>Sherlock Search</title>
 </head>
 <header class="header">
   <ul>
-    <li>Sobre nós</li>
+    <li class="basic-text">Sobre nós</li>
   </ul>
 </header>
+
 <body>
   <section class="main">
-    <h1>Insira aqui o seu alvo</h1>
+    <h1 class="home-cto title">Insira aqui o seu alvo</h1>
     <input type="text" class="input-search" />
-    <button>Buscar</button>
+    <button class="home-btn basic-text">Buscar</button>
   </section>
 </body>
 <footer class="footer">
-  <h3>Copyright 2024</h3>
+  <h3 class="basic-text">Copyright 2024</h3>
 </footer>
+
 </html>
