feat: added input

--- a/index.html
+++ b/index.html
@@ -21,8 +21,26 @@
 
 <body>
   <section class="main">
-    <h1 class="home-cto title">Insira aqui o seu alvo</h1>
-    <input type="text" class="input-search" />
+    <h1 class="home-cto title">Sherlock</h1>
+    <div class="wave-group">
+      <input required="" type="text" class="input">
+      <span class="bar"></span>
+      <label class="label">
+        <span class="label-char" style="--index: 0">p</span>
+        <span class="label-char" style="--index: 1">e</span>
+        <span class="label-char" style="--index: 2">s</span>
+        <span class="label-char" style="--index: 3">q</span>
+        <span class="label-char" style="--index: 4">u</span>
+        <span class="label-char" style="--index: 5">i</span>
+        <span class="label-char" style="--index: 6">s</span>
+        <span class="label-char" style="--index: 7">e</span>
+        <span class="label-char" style="--index: 8">&nbsp</span>
+        <span class="label-char" style="--index: 9">a</span>
+        <span class="label-char" style="--index: 10">q</span>
+        <span class="label-char" style="--index: 11">u</span>
+        <span class="label-char" style="--index: 12">i</span>
+      </label>
+    </div>
     <button class="home-btn basic-text">Buscar</button>
   </section>
 </body>
