Batata Doce caramelizada é bom

--- a/index.html
+++ b/index.html
@@ -1,51 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link type="text/css" rel="stylesheet" href="/css/reset.css">
-  <link type="text/css" rel="stylesheet" href="/css/home.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-    rel="stylesheet">
-  <title>Sherlock Search</title>
-</head>
-<header class="header">
-  <ul>
-    <li class="basic-text">Sobre nós</li>
-  </ul>
-</header>
-
-<body>
-  <section class="main">
-    <h1 class="home-cto title">Sherlock</h1>
-    <div class="wave-group">
-      <input required="" type="text" class="input">
-      <span class="bar"></span>
-      <label class="label">
-        <span class="label-char" style="--index: 0">p</span>
-        <span class="label-char" style="--index: 1">e</span>
-        <span class="label-char" style="--index: 2">s</span>
-        <span class="label-char" style="--index: 3">q</span>
-        <span class="label-char" style="--index: 4">u</span>
-        <span class="label-char" style="--index: 5">i</span>
-        <span class="label-char" style="--index: 6">s</span>
-        <span class="label-char" style="--index: 7">e</span>
-        <span class="label-char" style="--index: 8">&nbsp</span>
-        <span class="label-char" style="--index: 9">a</span>
-        <span class="label-char" style="--index: 10">q</span>
-        <span class="label-char" style="--index: 11">u</span>
-        <span class="label-char" style="--index: 12">i</span>
-      </label>
-    </div>
-    <button class="home-btn basic-text">Buscar</button>
-  </section>
-</body>
-<footer class="footer">
-  <h3 class="basic-text">Copyright 2024</h3>
-</footer>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
